KUDU-2987 Intra location rebalance crashes in special case.

The crash manifested itself in cases where a Kudu cluster
had a location that didn't host even a single replica of
a tablet.

Change-Id: Iea39472e55178fca688b390249432a0f7fefaaba
Reviewed-on: http://gerrit.cloudera.org:8080/14608
Tested-by: Alexey Serbin <aserbin@cloudera.com>
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>
(cherry picked from commit 0fea1cb8ede852a87efc422b394ffe8d1e89bc6c)
Reviewed-on: http://gerrit.cloudera.org:8080/14686
Tested-by: Kudu Jenkins
Reviewed-by: Grant Henke <granthenke@apache.org>